# heuristic-portfolio-optimizer

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  reproduction.yml
data/: README.md  checksums.json
data/canonical/: thesis_results_v1.json
data/frozen/: benchmark_ixic_2007_2024.csv  nasdaq_metadata.csv  z_score.csv
docs/analysis/: anexo_activacion_scout.md  faem_activation_calibration.html  faem_activation_calibration.md  filter_comparison.html  filter_comparison.md  pfa_sensitivity.html  pfa_sensitivity.md  reproduction_report.html  reproduction_report.md  scout-telemetry-viz.html  scout_activation_telemetry.html  scout_activation_telemetry.md
docs/thesis/: calibration.md  methodology.md  naming.md  objective_function.md
legacy/: abc_fa_bacanin.py  abc_fa_scout.py  abc_original.py  abc_probabilistic_scout.py  abc_scout_gravitacional.py  data_loader.py  final_adaptive_parameters.json  model_orchestrator.py  pmvg_cvx.py  refined_grid_search.py  robust_calibration_pipeline.md  robust_calibration_pipeline.py  run_calibration_multi_regime.py  test_calibrated_crisis_performance_v2.py
scripts/: build_reproduction_report.py  extract_canonical_results.py  generate_mini_golden.py  generate_scout_simplex_figure.py  generate_thesis_figures.py  run_faem_activation_calibration.py  run_filter_comparison.py  run_pfa_sensitivity.py  run_reproduction.py  run_scout_activation_telemetry.py
src/hive_abc/: __init__.py
tests/: conftest.py  frozen_artifacts_test.py  golden_backtest_test.py  hive_abc_test.py  reproduction_test.py
tests/algorithms/: abc_adaptive_test.py  abc_epsilon_test.py  abc_fa_bacanin_test.py  abc_faem_test.py  abc_gsa_test.py  base_test.py  conftest.py  scouting_test.py
tests/backtest/: engine_test.py  params_test.py  periods_test.py
tests/benchmarks/: equal_weight_test.py  min_variance_test.py
tests/calibration/: grid_test.py  runner_test.py  selection_test.py  splits_test.py
tests/core/: types_test.py
tests/data/: loading_test.py  universe_test.py
tests/golden/: mini_backtest_expected.json
tests/metrics/: concentration_test.py  performance_test.py  quantstats_parity_test.py  stats_test.py
tests/objectives/: penalties_test.py  risk_test.py  (+1 more)
thesis/: ABC_Thesis_Presentation.html  Maestria_en_Finanzas_ABC.docx  committee_tasks.md
(+43 files in other folders)
